# ConsoleGames

./: .env  .flake8  .gitignore  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  checkers.py  pyproject.toml  pytest.ini  replit.nix  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  pull_request_template2.md
.github/workflows/: python-app.yml
Install/: README.md
auto/nt/: install.ps1
auto/unix/: install.fish  install.fs  install.sh  install.zsh
docs/: CONTRIBUTING.md  README.md  SECURITY.md  bug_report.md  feature_request.md
docs/ConsoleGames/: main.md
docs/ConsoleGames/fun docs/: fun.md  pymatrix.md
docs/ConsoleGames/game docs/: checkers.md  chess.md  conways_game_of_life.md  tetris.md
docs/FAQ/: FAQ.md
docs/ISSUE_TEMPLATE/: bug-report.md
src/: checkers.py  conways_game_of_life.py  main.py  pacman.py  snake.py  solitare.py  sudoku.py  tetris.py  tic-tac-toe.py
src/calc/: calculator.py
src/calculator/: calculator.py
src/gamblingandorangesconsolegames/: game_buffer.py  main.py  system_info.py
src/gamblingandorangesconsolegames/ai/: ai_chat.py
src/gamblingandorangesconsolegames/calc/: calculator.py
src/gamblingandorangesconsolegames/fun/: asciiquarium.py  pymatrix.py
src/gamblingandorangesconsolegames/games/: checkers.py  snake.py
src/games/: chess.py  sudoku.py  tetris.py
tests/: test_calculator.py
