[tool.poetry]
name = "consolegames"
version = "0.1.0"
description = ""
authors = ["NoGambling && orangejuiceplz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "0.4.6"
keyboard = "0.13.5"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
