[tool.poetry]
name = "consolegames"
version = "0.1.0"
description = "a collection of terminal games written in python"
authors = ["NoGambling", "orangejuiceplz <orangejuiceplzdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/orangejuiceplz/ConsoleGames"
repository = "https://github.com/orangejuiceplz/ConsoleGames"
keywords = ["games", "console", "python", "cli"]
classifiers = [
    "Development Status :: 0.1.0 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
colorama = "0.4.6"
keyboard = "0.13.5"
pyperclip = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.poetry.scripts]
consolegames = "consolegames.main:main"
