[tool.poetry]
name = "GamblingAndOrangesConsoleGames"
version = "0.1.7"
description = "a collection of terminal games written in python"
authors = ["NoGambling", "orangejuiceplz <orangejuiceplzdev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NoGambling1/ConsoleGames"
repository = "https://github.com/NoGambling1/ConsoleGames"
keywords = ["games", "console", "python", "cli"]
classifiers = [
 "Development Status :: 3 - Alpha",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
colorama = "0.4.6"
keyboard = "0.13.5"
pyperclip = "^1.9.0"
psutil = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
flake8 = "^6.1.0"
mypy = "^1.5"
importlib-metadata = "^6.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.poetry.scripts]
consolegames = "consolegames.main:main"

[tool.flake8]
max-line-length = 127
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 127
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 127
